# police-data-intelligence

./: .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md  __init__.py  load_data.py  schema.sql  test_queries.md
data/etl/: __init__.py  cleaners.py  config.py  entity_managers.py  loaders.py  schema_utils.py
src/: __init__.py
src/agents/: __init__.py  coordinate_node.py  extract_node.py  graph.py  state.py
src/database/: __init__.py  connection.py
src/merge/: __init__.py  merge_node.py
src/retrieval/: __init__.py  search_node.py
src/validation/: __init__.py  validate_node.py
tests/: __init__.py  conftest.py  test_cleaners.py  test_config.py  test_coordinate_node.py  test_entity_managers.py  test_extract_node.py  test_graph.py  test_load_data_integration.py  test_loaders.py  test_merge_node.py  test_schemas.py  test_search_node.py  test_validate_node.py
