[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "police-data-intelligence"
version = "0.1.0"
description = "ETL and analysis system for police shooting incident data"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "D",      # pydocstyle (docstring checks)
    "UP",     # pyupgrade
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
# Use Google style docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test files may not need docstrings for every test method
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]
# __init__.py files
"*/__init__.py" = ["D104"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["load_data"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
